[gd_scene load_steps=5 format=3 uid="uid://de7hx2bqaieo5"]

[ext_resource type="Texture2D" uid="uid://cqv71owpp7vgm" path="res://assets/bbrl_skeleton_assets.png" id="1_lx5au"]
[ext_resource type="Script" uid="uid://c5vind1ajvfh6" path="res://scripts/shop.gd" id="1_xfvoa"]
[ext_resource type="PackedScene" uid="uid://c1k1cl2oh08n1" path="res://scenes/SoulsUI.tscn" id="2_1l46r"]
[ext_resource type="Script" path="res://scripts/ShopButton.gd" id="3_032fp"]

[node name="Shop" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_xfvoa")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 281.0
offset_top = 271.0
offset_right = 697.0
offset_bottom = 643.0
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SoulsUI" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_1l46r")]
position = Vector2(309, 33)

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PermanentUpgrades" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BallDamage" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PermanentUpgrades"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ball Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallDamageButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PermanentUpgrades"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy: 0"
script = ExtResource("3_032fp")

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Refreshables" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2

[node name="randUpgrade1" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade1"]
layout_mode = 2

[node name="randUpgradeName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade1"]
layout_mode = 2
text = "Upgrade 1"

[node name="randUpgradeButton1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy: 0"
script = ExtResource("3_032fp")

[node name="randUpgrade2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade2"]
layout_mode = 2

[node name="randUpgradeName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade2"]
layout_mode = 2
text = "Upgrade 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="randUpgradeButton2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy: 0"
script = ExtResource("3_032fp")

[node name="randUpgrade3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade3"]
layout_mode = 2

[node name="randUpgradeName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade3"]
layout_mode = 2
text = "Upgrade 3"

[node name="randUpgradeButton3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy: 0"
script = ExtResource("3_032fp")

[node name="randActiveSkill" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill/VBoxContainer/HBoxContainer"]
position = Vector2(0, 2)
texture = ExtResource("1_lx5au")
centered = false
region_enabled = true
region_rect = Rect2(33, 33, 30, 30)

[node name="ActiveSkillName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill/VBoxContainer"]
layout_mode = 2
text = "Active Skill"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill/VBoxContainer"]
layout_mode = 2

[node name="ActiveSkillButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy: 0"
script = ExtResource("3_032fp")

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables"]
layout_mode = 2

[node name="Refresh Tab" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Refresh" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/Refresh Tab"]
layout_mode = 2
size_flags_vertical = 1
text = "Refresh"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RefreshButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables/Refresh Tab"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
text = "Buy: 0"
script = ExtResource("3_032fp")

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Refreshables"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitShop" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Exit"

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PermanentUpgrades/BallDamageButton" to="." method="_on_ball_damage_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade1/randUpgradeButton1" to="." method="_on_rand_upgrade_button_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade2/randUpgradeButton2" to="." method="_on_rand_upgrade_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randUpgrade3/randUpgradeButton3" to="." method="_on_rand_upgrade_button_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Refreshables/VBoxContainer/randActiveSkill/ActiveSkillButton" to="." method="_on_active_skill_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Refreshables/Refresh Tab/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ExitShop" to="." method="_on_exit_shop_pressed"]
